<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.github.wille1101.thirty.controller.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_GameFragment"
            app:destination="@id/GameFragment"
            />

    </fragment>

    <fragment
        android:id="@+id/GameFragment"
        android:name="com.github.wille1101.thirty.controller.GameFragment"
        android:label="@string/game_fragment_label"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/action_GameFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
        <action
            android:id="@+id/action_GameFragment_to_ScoreFragment"
            app:destination="@id/ScoreFragment" />
    </fragment>

    <fragment
        android:id="@+id/ScoreFragment"
        android:name="com.github.wille1101.thirty.controller.ScoreFragment"
        android:label="@string/score_fragment_label"
        tools:layout="@layout/fragment_score">

        <action
            android:id="@+id/action_ScoreFragment_to_MainFragment"
            app:destination="@id/MainFragment"
            app:popUpTo="@+id/MainFragment"
            app:popUpToInclusive="true"/>
    </fragment>

</navigation>